# Ncurses-stuff

./: .gitignore  CMakeLists.txt  README.md
src/goodbye/: goodbye.cpp
